--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,55 @@ li{
   color: #242424;
 }
 
+.mt-2 {
+  margin-top: 16px !important;
+}
+.mb-2 {
+  margin-bottom: 16px;
+}
+.mt-3 {
+  margin-top: 24px !important;
+}
+.mb-3 {
+  margin-bottom: 24px !important;
+}
+.mt-4 {
+  margin-top: 32px !important;
+}
+.mb-4 {
+  margin-bottom: 32px !important;
+}
+.mt-5 {
+  margin-top: 40px !important;
+}
+.mb-5 {
+  margin-bottom: 40px !important;
+}
+
+.pt-2 {
+  padding-top: 16px !important;
+}
+.pb-2 {
+  padding-bottom: 16px !important;
+}
+.pt-3 {
+  padding-top: 24px !important;
+}
+.pb-3 {
+  padding-bottom: 24px !important;
+}
+.pt-4 {
+  padding-top: 32px !important;
+}
+.pb-4 {
+  padding-bottom: 32px !important;
+}
+.pt-5 {
+  padding-top: 40px !important;
+}
+.pb-5 {
+  padding-bottom: 40px !important;
+}
 
 .-cardSection{
   display: flex;
@@ -78,14 +127,13 @@ li{
 .-card{
   background-color: #1F5EBB;
   width: 100%;
-  padding: 32px 64px !important;
+  padding: 32px 0px !important;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 .-card>img{
-  /*width: 100%; */
   margin-bottom: 16px;
 }
 .-cardBtnSection{
@@ -119,7 +167,7 @@ li{
   justify-content: space-between;
   border: none;
 
-  box-shadow: 1px 1px 8px 1px rgba(0, 0, 0, 0.384);
+  box-shadow: 2px 3px 8px 2px rgba(0, 0, 0, 0.384);
 }
 .-btnPrimary{
   background-color: #1F5EBB;
@@ -134,14 +182,4 @@ li{
 }
 .-btnWhite:hover{
   background-color: rgb(206, 206, 206);
-}
-
-
-
-
-@media screen and (max-width: 768px) {
-  .-card{
-    width: 90%;
-  }
-
 }
